<resources>
    <string name="app_name">Licenta</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="parola">Parola</string>
    <string name="signup">SignUp</string>
    <string name="apasa_pentru_login">Ai deja cont? Apasa pentru LogIn</string>
    <string name="apasa_pentru_signup">Apasa pentru a-ti crea contul</string>
    <string name="logout">logout</string>
    <string name="nu_ai_cont_inca">Nu ai cont?</string>
    <string name="nume">Nume</string>
    <string name="prenume">Prenume</string>
    <string name="data_nastere">Data nastere</string>
    <string name="facultate">Facultate</string>
    <string name="confirma_parola">Confirma parola</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="harta">Harta</string>
    <string name="grafic">Grafic</string>
    <string name="progres">ToDo</string>
    <string name="logout_nav">Logout</string>
    <string name="materii">  Materii  </string>
    <string name="adauga_materie">Adauga materie</string>
    <string name="adauga_nota">Adauga nota</string>
    <string name="nume_header">Nume</string>
    <string name="prenume_header">Prenume</string>
    <string name="faragraf">Se pare ca nu ai nicio materie introdusa inca!</string>
    <string name="introdunote">Poti sa introduci materia si notele obtinute aici</string>
    <string name="tasks">~~To do~~</string>
    <string name="new_task">new_task</string>
    <string name="save">save</string>

    <string name="materie">Materie</string>
    <string name="introdu_materie">Introdu materie</string>
    <string name="data_de_finalizare">Data de finalizare</string>
    <string name="salveaza">Salveaza</string>
    <string name="introduce_obiective_de_atins">Introdu obiective de atins!</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="regresie">Regresie</string>


</resources>