<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_harta"
            android:icon="@drawable/ic_map"
            android:title="@string/harta" />

        <item
            android:id="@+id/nav_grafic"
            android:icon="@drawable/ic_chart"
            android:title="@string/grafic" />

        <item
            android:id="@+id/nav_progres"
            android:icon="@drawable/ic_deadline"
            android:title="@string/progres" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout_nav" />
        </menu>
    </item>

</menu>