<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A39CF4"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#A39CF4"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="75dp"

        android:padding="0dp">

        <ImageView
            android:id="@+id/profile_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:adjustViewBounds="true"
            android:maxWidth="6dp"
            android:maxHeight="6dp"
            android:elevation="10dp"
            android:src="@drawable/ic_profile_login" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="417dp"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-90dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/Login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#27255C"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_id"
                android:layout_marginTop="30dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/border">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_inputLayout"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/border">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parola"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/parola"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView_show_hide_password"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:layout_below="@+id/email_inputLayout"
                android:layout_alignParentRight="true"
                android:layout_marginTop="17dp"
                android:paddingRight="15dp"

                android:src="@drawable/ic_hide_pwd" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:elevation="10dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_logIn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300dp"
                android:text="@string/login"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
               />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="350dp"

                android:text="@string/nu_ai_cont_inca"
                android:textAlignment="center"
                android:textColor="#27255C"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signupNow"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="370dp"
                android:layout_marginBottom="20dp"

                android:text="@string/apasa_pentru_signup"
                android:textAlignment="center"
                android:textColor="#27255C"
                android:textSize="17sp"
                android:textStyle="italic" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>