<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@color/lavander3"
    android:orientation="vertical"
    tools:context=".NavigationDrawer.GraficFragment.GraficFragment">

    <LinearLayout
        android:id="@+id/butoane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pieChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_chart"
            android:fontFamily="serif-monospace"
            android:text="@string/pie_chart"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_barChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_chart"
            android:fontFamily="serif-monospace"
            android:text="@string/bar_chart"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_regresie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_chart"
            android:fontFamily="serif-monospace"
            android:text="@string/regresie"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/butoane"
        android:orientation="vertical">

        <!-- List View from which data is to be searched -->
        <ListView
            android:id="@+id/listView_regresie"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:fontFamily="serif-monospace"
            android:visibility="gone"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:visibility="gone" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>